--- a/style.css
+++ b/style.css
@@ -1,7 +1,7 @@
 body {
     height: 100%;
     width: 100%;
-    background: url("images/hero-bg.jpg") center/cover no-repeat;
+    background: url("hero-bg.jpg") center/cover no-repeat;
 }
 
 /* Add a black background color to the top navigation */
@@ -73,7 +73,7 @@ body {
 /* Style for cards in slider */
 .wrapper {
   display: flex;
-  margin: 8% 10%;
+  margin: 8% 9%;
   padding: 100px 40px;
   max-width: 1100px;
   width: 100%;
