--- a/style.css
+++ b/style.css
@@ -1,7 +1,21 @@
 body {
     height: 100%;
     width: 100%;
-    background: url("hero-bg.jpg") center/cover no-repeat;
+    background-image: linear-gradient(#033E3E 15%, #123456, #2B547E, #368BC1);
+    /*background: url("images/hero-bg.jpg") center/cover no-repeat;*/
+}
+
+/*Introduction of Website*/
+.intro h1{
+    padding: 15px;
+}
+.intro{
+    line-height: 35px;
+    text-align: center;
+    font-weight: bold;
+    font-size: 22px;
+    font-family: Times new roman;
+    color: white;
 }
 
 /* Add a black background color to the top navigation */
@@ -34,9 +48,9 @@ body {
 
 /* Change the color of links on hover */
 .topnav a:hover {
-  background-color: #ddd;
+  background-image: linear-gradient(#123456, #368BC1);
   border-radius: 10px;
-  color: black;
+  color: fff;
 }
 
 /* Add a color to the active/current link*/
@@ -73,8 +87,8 @@ body {
 /* Style for cards in slider */
 .wrapper {
   display: flex;
-  margin: 8% 9%;
-  padding: 100px 40px;
+  margin: 2% 5%;
+  padding: 15px;
   max-width: 1100px;
   width: 100%;
   position: relative;
@@ -241,9 +255,9 @@ body {
 }
 
 .topnav .login-btn:hover {
-    background-color: #ddd;
+   background-image: linear-gradient(#123456, #368BC1);
     border-radius: 10px;
-    color: black;
+    color: fff;
 }
 
 .form-popup {
