--- a/style.css
+++ b/style.css
@@ -4,6 +4,118 @@ body {
     background-image: linear-gradient(#033E3E 15%, #123456, #2B547E, #368BC1);
     /*background: url("images/hero-bg.jpg") center/cover no-repeat;*/
 }
+/*Support page CSS*/
+.support{
+    min-height: 100vh;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    background-image: linear-gradient(#033E3E 15%, #123456, #2B547E, #368BC1);
+}
+
+.support form{
+    width: 670px;
+    height: 400px;
+    display: flex;
+    justify-content: center;
+    box-shadow: 20px 20px 50px rgba(0, 0, 0, 0.5);
+    border-radius: 15px;
+    background: rgba(255, 255, 255, 0.1);
+    backdrop-filter: blur(10px);
+    flex-wrap: wrap;
+}
+
+.support form h1{
+    color: #fff;
+    font-weight: 500;
+    margin-top: 20px;
+    width: 500px;
+    text-align: center;
+}
+
+.support form input{
+    width: 290px;
+    height: 40px;
+    padding-left: 10px;
+    outline: none;
+    border: none;
+    font-size: 15px;
+    margin-bottom: 10px;
+    background: none;
+    border-bottom: 2px solid #fff;
+    color: #fff;
+}
+
+.support form input::placeholder{
+    color: #fff;
+}
+
+.support form #lastName,
+.support form #mobile{
+    margin-left: 20px;
+}
+
+.support form h4{
+    color: #fff;
+    font-weight: 300;
+    width: 600px;
+    margin-top: 20px;
+}
+
+.support form textarea{
+    background: none;
+    border: none;
+    border-bottom: 2px solid #fff;
+    color: #fff;
+    font-weight: 200;
+    font-size: 15px;
+    padding: 10px;
+    outline: none;
+    min-width: 600px;
+    max-width: 600px;
+    min-height: 80px;
+    max-height: 80px;
+}
+
+textarea::-webkit-scrollbar{
+    width: 1em;
+}
+
+textarea::-webkit-scrollbar-thumb{
+    background-color: rgba(194, 194, 194, 0.713);
+}
+
+.support form #button{
+    border: none;
+    background: #fff;
+    border-radius: 5px;
+    margin-top: 20px;
+    font-weight: 600;
+    font-size: 20px;
+    color: #333;
+    width: 100px;
+    padding: 0;
+    margin-right: 500px;
+    margin-bottom: 30px;
+    transition: 0.3s;
+}
+
+.support form #button:hover{
+    opacity: 0.7;
+}
+
+/*Introduction of Website*/
+.intro h1{
+    padding: 20px;
+}
+.intro{
+    line-height: 35px;
+    text-align: center;
+    font-weight: bold;
+    font-size: 22px;
+    font-family: Times new roman;
+    color: white;
+}
 
 /*Introduction of Website*/
 .intro h1{
