--- a/style.css
+++ b/style.css
@@ -2,7 +2,7 @@ body {
     height: 100%;
     width: 100%;
     /*background-image: linear-gradient(#033E3E 15%, #123456, #2B547E, #368BC1);*/
-    background: url("images/hero-bg.jpg") center/cover no-repeat;
+    background: url("hero-bg.jpg") center/cover no-repeat;
 }
 
 /*Support page CSS*/
@@ -322,7 +322,7 @@ textarea::-webkit-scrollbar-thumb{
   body {
     height: 1000vh;
     width: 100%;
-    background: url("images/hero-bg.jpg");
+    background: url("hero-bg.jpg");
     }
 }
 
@@ -334,7 +334,7 @@ textarea::-webkit-scrollbar-thumb{
   body {
     height: 1000vh;
     width: 100%;
-    background: url("images/hero-bg.jpg");
+    background: url("hero-bg.jpg");
     }
 }
 
@@ -459,7 +459,7 @@ textarea::-webkit-scrollbar-thumb{
 
 .login .form-details {
     padding: 0 40px;
-    background: url("images/login-img.jpg");
+    background: url("login-img.jpg");
     background-position: center;
     background-size: cover;
     border-radius: 20px;
@@ -467,7 +467,7 @@ textarea::-webkit-scrollbar-thumb{
 
 .signup .form-details {
     padding: 0 20px;
-    background: url("images/signup-img.jpg");
+    background: url("signup-img.jpg");
     background-position: center;
     background-size: cover;
     border-radius: 20px;
